# simple_bazel_end_to_end

./: .bazelrc  .gitignore  README.md  WORKSPACE
.devcontainer/: Dockerfile  devcontainer.json
cc/: BUILD.bazel  main.cpp  test.cpp
cc/my_lib/: BUILD.bazel  my_lib.cpp  my_lib.hpp
dapp/: BUILD.bazel  app.cpp
